<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_profile_main_lay"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".edit_profile"
        android:background="@drawable/background_explore">

        <RelativeLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/blue_comb3"
                android:scaleType="centerCrop">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ART HUB"
                android:textColor="@color/black"
                android:fontFamily="@font/timeline"
                android:textSize="40sp"
                android:padding="3sp"
                android:gravity="center"
                android:background="@color/trans">
            </TextView>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/dark_violet"
            app:layout_constraintTop_toBottomOf="@+id/logo">
        </View>

        <LinearLayout
            android:id="@+id/edit_profile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp">

            <ImageButton
                android:id="@+id/edit_profile_back"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@color/trans"
                android:src="@drawable/left_arrow"
                android:scaleType="fitXY">
            </ImageButton>

            <TextView
                android:id="@+id/your_gallery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/trans"
                android:fontFamily="@font/timeline"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="5sp"
                android:text="@string/edit_profile"
                android:textColor="@color/light_black"
                android:textSize="25sp">
            </TextView>
        </LinearLayout>

        <ScrollView
            android:id="@+id/edit_profile_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_text"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="200sp">

                <LinearLayout
                    android:id="@+id/edit_profile_elem1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="20sp"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/edit_profile_img"
                        android:layout_width="110sp"
                        android:layout_height="110sp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:src="@drawable/camera__icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                    </ImageView>

                    <ImageButton
                        android:id="@+id/edit_profile_change_btn"
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@color/trans"
                        android:src="@drawable/modify_icon"
                        android:scaleType="fitCenter">
                    </ImageButton>
                </LinearLayout>

                <TextView
                    android:id="@+id/edit_profile_elem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:fontFamily="@font/timeline"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:layout_marginTop="20sp"
                    android:text="@string/edit_username"
                    android:textColor="@color/light_black"
                    android:textSize="23sp"
                    android:layout_marginStart="40sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem1">
                </TextView>

                <ImageView
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:layout_marginTop="20sp"
                    app:layout_constraintStart_toEndOf="@+id/edit_profile_elem2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem1"
                    android:src="@drawable/profile_icon"
                    android:scaleType="fitXY">
                </ImageView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_profile_elem3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/light_black"
                        android:inputType="textMultiLine"
                        android:ellipsize="end"
                        android:scrollbars="none"
                        android:background="@color/trans"
                        android:gravity="center"
                        android:fontFamily="@font/timeline">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/edit_profile_elem4"
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/dark_violet_trans"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem3">
                </View>

                <TextView
                    android:id="@+id/edit_profile_elem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@color/trans"
                    android:fontFamily="@font/timeline"
                    android:gravity="right"
                    android:layout_marginTop="20sp"
                    android:layout_weight="1"
                    android:text="@string/edit_bio"
                    android:textColor="@color/light_black"
                    android:textSize="23sp"
                    android:layout_marginRight="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem4">
                </TextView>

                <ImageView
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:layout_marginTop="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/edit_profile_elem5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem4"
                    android:src="@drawable/bio_icon"
                    android:scaleType="fitXY">
                </ImageView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_profile_elem6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_profile_bio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/light_black"
                        android:inputType="textMultiLine"
                        android:ellipsize="end"
                        android:maxLines="100"
                        android:scrollbars="vertical"
                        android:background="@color/trans"
                        android:gravity="center"
                        android:fontFamily="@font/timeline">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/edit_profile_elem7"
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/dark_violet_trans"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem6">
                </View>

                <Button
                    android:id="@+id/edit_profile_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:text="SAVE"
                    android:textSize="23sp"
                    android:fontFamily="@font/timeline"
                    android:background="@color/trans"
                    android:textColor="@color/light_black"
                    android:layout_marginRight="40sp"
                    android:layout_marginTop="40sp"
                    android:drawableRight="@drawable/save_info_icon_sized"
                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_elem7"
                    app:layout_constraintEnd_toEndOf="parent">
                </Button>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/settings_warning_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans"
        android:visibility="invisible"
        android:fontFamily="@font/timeline"
        android:padding="20sp"
        android:textSize="20sp"
        android:textColor="@color/light_black">
    </Button>
</RelativeLayout>